message-service-api/src/main/java/com/example/messageservice/error/BadRequestException.java
package com.example.messageservice.error;

public class BadRequestException extends RuntimeException {
    public BadRequestException() {
        super();
    }

    public BadRequestException(String message) {
        super(message);
    }
}
